Removing references to cloudfront distribution

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 REACT_APP_AWS_REGION=us-east-2
 REACT_APP_DYNAMO_CLIENT_VERSION=2012-08-10
-REACT_APP_AUTH_URI="https://d2kaclauprufix.cloudfront.net/auth"
-REACT_APP_BASE_URI="https://d2kaclauprufix.cloudfront.net"
+REACT_APP_AUTH_URI="http://project-elephant-dev.s3-website.us-east-2.amazonaws.com/auth"
+REACT_APP_BASE_URI="http://project-elephant-dev.s3-website.us-east-2.amazonaws.com"
 REACT_APP_API_URI="https://9o0anr3ck2.execute-api.us-east-2.amazonaws.com/dev"
